# production-control

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
docs/: API.md  CONFIGURATION.md  CQRS_QUERY_GUIDELINES.md  DEVCONTAINERS.md  DEVELOPMENT.md  EVENTS_ARCHITECTURE.md  INIT_RULES.md  INSTALLATION.md  MONITORING.md  TROUBLESHOOTING.md
scripts/: docker-entrypoint.sh
src/: main.py
src/api/: __init__.py
src/api/v1/: __init__.py  dependencies.py
src/application/: __init__.py
src/application/batches/: mappers.py
src/application/common/: dtos.py
src/application/dtos/: batches.py  work_centers.py
src/application/events/: registry.py  serializer.py
src/application/exceptions/: __init__.py  use_case.py
src/application/mappers/: batches.py  products.py  work_centers.py
src/application/products/: commands.py  dtos.py  use_cases.py
src/application/queries/: __init__.py  batches.py  ports.py  products.py  work_centers.py
src/application/uow/: __init__.py  event_collector.py  identity_map.py  protocol.py  proxy_repositories.py  unit_of_work.py
src/application/use_cases/: batches.py  products.py  work_centers.py
src/application/webhooks/: mappers.py
src/application/work_centers/: mappers.py
src/core/: config.py  database.py  dependencies.py  logging.py  settings.py  time.py
src/data/migrations/: env.py
src/data/models/: __init__.py  base.py  batch.py  product.py  webhook.py  work_center.py
src/domain/batch/: __init__.py  entity.py  filter.py  repository.py
src/domain/batches/: __init__.py  entities.py  events.py  repositories.py  services.py  value_objects.py
src/domain/common/: __init__.py  entities.py  enums.py  events.py  exceptions.py  queries.py  repository_protocol.py  value_objects.py
src/domain/entities/: batch.py  work_center.py
src/domain/product/: __init__.py  entity.py  repository.py
src/domain/products/: __init__.py  entities.py  events.py  repositories.py  services.py  value_objects.py
src/domain/repositories/: __init__.py  batches.py  products.py  work_centers.py
src/domain/repository/: batch.py  exceptions.py  product.py  work_center.py
src/presentation/: main.py
(+542 files in other folders)
